@@ -4,12 +4,12 @@ sys.path += ["../"]
 import mingus.extra.tablature as tablature
 import unittest
 
-class test_Suite(unittest.TestCase):
+class test_Tablature(unittest.TestCase):
 	
 	def setUp(self):
 		pass
 
 
 def suite():
-	return unittest.TestLoader().loadTestsFromTestCase(test_Suite)
+	return unittest.TestLoader().loadTestsFromTestCase(test_Tablature)
 
